package com.grupo6.ConectaJob.Model.TempoSubdivicoes;

public class intervaloComString {
    private IntervaloTempo intervaloTempoX;
    private String complemento;

    public intervaloComString() {
    }

    public IntervaloTempo getIntervaloTempoX() {
        return intervaloTempoX;
    }

    public void setIntervaloTempoX(IntervaloTempo intervaloTempoX) {
        this.intervaloTempoX = intervaloTempoX;
    }

    public String getComplemento() {
        return complemento;
    }

    public void setComplemento(String complemento) {
        this.complemento = complemento;
    }
}
