package com.grupo6.ConectaJob.Model.cargo;


public class Cargo {

    private String nomeCargo;
    private String visaoCargo;

    public Cargo() {}

    public String getNomeCargo() {
        return nomeCargo;
    }

    public void setNomeCargo(String nomeCargo) {
        this.nomeCargo = nomeCargo;
    }

    public String getVisaoCargo() {
        return visaoCargo;
    }

    public void setVisaoCargo(String visaoCargo) {
        this.visaoCargo = visaoCargo;
    }
}
